push, are packets broken and not clearing? yes.
do i love men? yes.

--- a/ext/config.conf
+++ b/ext/config.conf
@@ -7,6 +7,8 @@ database: motor
 domain: mitsuha.pw
 address: /tmp/motor.sock
 
+bot_name: louise
+
 [features]
 clan_leaderboards: false
 group_chat: false
